@@ -1,3 +1,7 @@
+2009-06-10  higepon  <higepon@users.sourceforge.jp>
+
+        * OSCompatThread.h : Conditional variables waitWithTimeout works.
+
 2009-06-09  higepon  <higepon@users.sourceforge.jp>
 
         * test/concurrent-crash.ss : Added.
